--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <section class="specials">
           <h2 class="visually-hidden">Специальные предложения</h2>
         <div class="special-banner">
-          <h3 class="special-banner-title">Малинка даром!</h3>
+          <h3 class="special-banner-title raspberry">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
           <a class="button" href="#">Хочу варенье!</a>
         </div>
         <div class="special-banner">
-          <h3 class="special-banner-title">Шоколадки даром!</h3>
+          <h3 class="special-banner-title chocolates">Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
           <a class="button" href="#">Хочу варенье!</a>
         </div>
@@ -165,23 +165,21 @@
           </form>
         </div>
       </div>
+    </main>
   </div>
 
-  <div class="map-wrapper">
-      <section class="contacts">
-        <img src="img/map.jpg" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург">
+  <div class="map">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <img src="img/map.jpg" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург">
+  </div>
+
+  <div class="page-wrapper">
+      <footer class="footer">
         <div class="contacts-info">
           <p>Адрес главного офиса и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
           <p>Для заказов по телефону: <b>8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
           <a class="button" href="#">Форма обратной связи</a>
         </div>
-      </section>
-  </div>
-
-  <div class="page-wrapper">
-    </main>
-
-    <footer class="footer">
       <ul class="socials">
         <li><a class="social social-tw" href="#" aria-label="Твиттер"></a></li>
         <li><a class="social social-inst" href="#" aria-label="Инстаграм"></a></li>
