--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </ul>
       <p class="copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy.svg" height="39" width="108" alt="HTML Academy логотип">
+          <img src="img/logo-htmlacademy.svg" height="39" width="108" alt="HTML Academy логотип">
         </a>
         Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2018
       </p>
