--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Каталог магазина Глейси</title>
 </head>
 
@@ -122,55 +122,55 @@
 
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Жирность:</legend>
-            <ul class="catalog-radio-list">
+            <ul class="catalog-list catalog-radio-list">
               <li class="catalog-radio-item">
                 <input class="visually-hidden" type="radio" name="fat" id="zero" value="0">
-                <label class="fat-label" for="zero">0%</label>
+                <label class="catalog-filter-label" for="zero">0%</label>
               </li>
 
               <li class="catalog-radio-item">
                 <input class="visually-hidden" type="radio" name="fat" id="ten" value="10" checked>
-                <label class="fat-label" for="ten">до 10%</label>
+                <label class="catalog-filter-label" for="ten">до 10%</label>
               </li>
 
               <li class="catalog-radio-item">
                 <input class="visually-hidden" type="radio" name="fat" id="under-30" value="<30">
-                <label class="fat-label" for="under-30">до 30%</label>
+                <label class="catalog-filter-label" for="under-30">до 30%</label>
               </li>
 
               <li class="catalog-radio-item">
                 <input class="visually-hidden" type="radio" name="fat" id="more-30" value=">30">
-                <label class="fat-label" for="more-30">выше 30%</label>
+                <label class="catalog-filter-label" for="more-30">выше 30%</label>
               </li>
             </ul>
           </fieldset>
 
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Наполнители:</legend>
-            <ul class="catalog-checkbox-list">
+            <ul class="catalog-list catalog-checkbox-list">
               <li class="catalog-chekbox-item">
                 <input class="visually-hidden" type="checkbox" name="chocolate-filler" id="chocolate" checked>
-                <label class="filler-label" for="chocolate">шоколадные</label>
+                <label class="catalog-filter-label" for="chocolate">шоколадные</label>
               </li>
 
               <li class="catalog-chekbox-item">
                 <input class="visually-hidden" type="checkbox" name="sugar-filler" id="sugar" checked>
-                <label class="filler-label" for="sugar">сахарные присыпки</label>
+                <label class="catalog-filter-label" for="sugar">сахарные присыпки</label>
               </li>
 
               <li class="catalog-chekbox-item">
                 <input class="visually-hidden" type="checkbox" name="fruits-filler" id="fruits">
-                <label class="filler-label" for="fruits">фрукты</label>
+                <label class="catalog-filter-label" for="fruits">фрукты</label>
               </li>
 
               <li class="catalog-chekbox-item">
                 <input class="visually-hidden" type="checkbox" name="syrup-filler" id="syrup">
-                <label class="filler-label" for="syrup">сиропы</label>
+                <label class="catalog-filter-label" for="syrup">сиропы</label>
               </li>
 
               <li class="catalog-chekbox-item">
                 <input class="visually-hidden" type="checkbox" name="jam-filler" id="jam">
-                <label class="filler-label" for="jam">джемы</label>
+                <label class="catalog-filter-label" for="jam">джемы</label>
               </li>
             </ul>
           </fieldset>
@@ -185,7 +185,9 @@
         <h2 class="visually-hidden">Каталог сливочного мороженого</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            </a>
             <p class="catalog-item-price">310₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
@@ -193,7 +195,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            </a>
             <p class="catalog-item-price">380₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
@@ -201,7 +205,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            </a>
             <p class="catalog-item-price">355₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
@@ -209,7 +215,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            </a>
             <p class="catalog-item-price">310₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
@@ -217,7 +225,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+            </a>
             <p class="catalog-item-price">325₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
@@ -225,7 +235,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+            </a>
             <p class="catalog-item-price">410₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
@@ -233,7 +245,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+            </a>
             <p class="catalog-item-price">375₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
@@ -241,7 +255,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+            </a>
             <p class="catalog-item-price">320₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
@@ -249,7 +265,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+            </a>
             <p class="catalog-item-price">440₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
@@ -257,7 +275,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+            </a>
             <p class="catalog-item-price">435₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
@@ -265,7 +285,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+            </a>
             <p class="catalog-item-price">355₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
@@ -273,7 +295,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item">
-            <img src="img/icecream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+            </a>
             <p class="catalog-item-price">420₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
