--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>HTML Academy: Глейси</title>
 </head>
 
@@ -106,7 +106,9 @@
         <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="catalog-list">
           <li class="catalog-item hit">
-            <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            </a>
             <p class="catalog-item-price">310₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
@@ -114,7 +116,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item hit">
-            <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            </a>
             <p class="catalog-item-price">380₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
@@ -122,7 +126,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item hit">
-            <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            </a>
             <p class="catalog-item-price">355₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
@@ -130,7 +136,9 @@
             <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
           </li>
           <li class="catalog-item hit">
-            <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            <a class="catalog-item-image" href="#">
+              <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            </a>
             <p class="catalog-item-price">310₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
