Исправления для стилизации
Добавлены доп. классы, исправлены мелкие ошибки, подключены шрифты и стилевой файл.

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Каталог магазина Глейси</title>
 </head>
@@ -39,7 +41,7 @@
             </form>
           </li>
           <li class="login">
-            <a href="#" aria-label="Вход в учетную запись"></a>
+            <a href="#" aria-label="Вход в учетную запись">Вход</a>
             <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
               <label class="visually-hidden" for="email-field">Введите адрес электронной почты</label>
               <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
@@ -96,7 +98,7 @@
       <ul class="breadcrumbs">
         <li><a class="breadcrumbs-link" href="index.html">Главная</a></li>
         <li><a class="breadcrumbs-link" href="#">Каталог</a></li>
-        <li><a class="breadcrumbs-link">Сливочное</a></li>
+        <li><a>Сливочное</a></li>
       </ul>
 
       <h1 class="main-title">Сливочное мороженое</h1>
