--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>HTML Academy: Глейси</title>
 </head>
@@ -39,13 +41,13 @@
             </form>
           </li>
           <li class="login">
-            <a href="#" aria-label="Вход в учетную запись"></a>
+            <a href="#" aria-label="Вход в учетную запись">Вход</a>
             <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
               <label class="visually-hidden" for="email-field">Введите адрес электронной почты</label>
               <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
               <label class="visually-hidden" for="password-field">Введите пароль</label>
               <input type="password" name="password" id="password-field" placeholder="Пароль" required>
-              <button class="button" type="submit">Войти</button>
+              <button class="button login-button" type="submit">Войти</button>
               <div class="login-links">
                 <a href="#">Забыли пароль?</a>
                 <a href="#">Новая регистрация</a>
@@ -90,15 +92,15 @@
 
       <section class="specials">
           <h2 class="visually-hidden">Специальные предложения</h2>
-        <div class="special-banner">
-          <h3 class="special-banner-title raspberry">Малинка даром!</h3>
+        <div class="special-banner raspberry">
+          <h3 class="special-banner-title">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
           <a class="button" href="#">Хочу варенье!</a>
         </div>
-        <div class="special-banner">
-          <h3 class="special-banner-title chocolates">Шоколадки даром!</h3>
+        <div class="special-banner chocolates">
+          <h3 class="special-banner-title">Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="button" href="#">Хочу варенье!</a>
+          <a class="button" href="#">Хочу шоколадки!</a>
         </div>
       </section>
 
@@ -185,7 +187,7 @@
       <div class="contacts-info">
         <p>Адрес главного офиса и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
         <p>Для заказов по телефону: <b>8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
-        <a class="button" href="#">Форма обратной связи</a>
+        <a class="button contacts-info-btn" href="#">Форма обратной связи</a>
       </div>
       <ul class="socials">
         <li><a class="social social-tw" href="#" aria-label="Глейси в Твиттер"></a></li>
